General: Updated Read Me.txt Graphics 2 Project: Added Info.txt, Replaced Turrets with Rocks, Replaced Portal Gun with Flashlight, Cleaned up some unused files

--- a/Graphics 2 Project/Graphics2Project/Graphics2.vcxproj.filters
+++ b/Graphics 2 Project/Graphics2Project/Graphics2.vcxproj.filters
@@ -43,11 +43,11 @@
     <FxCompile Include="Skybox_VS.hlsl" />
     <FxCompile Include="Stage_PS.hlsl" />
     <FxCompile Include="Stage_VS.hlsl" />
-    <FxCompile Include="Turret_PS.hlsl" />
-    <FxCompile Include="Turret_VS.hlsl" />
     <FxCompile Include="Texture_PS.hlsl" />
     <FxCompile Include="Portal_PS.hlsl" />
     <FxCompile Include="Physics_CS.hlsl" />
+    <FxCompile Include="Rock_PS.hlsl" />
+    <FxCompile Include="Rock_VS.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Light.hlsli" />
